<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/process_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="66"
        app:layout_constraintTop_toTopOf="parent">
    </com.google.android.material.progressindicator.LinearProgressIndicator>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/process_bar"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/inputtype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/textview_inputtype">
        </TextView>

        <TextView
            android:id="@+id/leveltype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/textview_leveltype">
        </TextView>

        <TextView
            android:id="@+id/accuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_accuracy"
            android:layout_marginTop="25dp"
            >
        </TextView>

        <TextView
            android:id="@+id/wpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/speed_metric">
        </TextView>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/elapsed_time">
        </TextView>

        <Button
            android:id="@+id/restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:onClick="onClick"
            android:text="@string/button_finish"
            tools:ignore="UsingOnClickInXml">
        </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>